[gd_scene load_steps=3 format=2]

[ext_resource path="res://Enemies/Enemy_Abstract_Class.gd" type="Script" id=1]
[ext_resource path="res://Sound Effects/Hit 1.mp3" type="AudioStream" id=2]

[node name="Enemy_Abstract_Class" type="Position2D"]
script = ExtResource( 1 )

[node name="flash_timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="knockback_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="flash_timer" to="." method="_on_flash_timer_timeout"]
[connection signal="timeout" from="knockback_timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
